fixed spacing with items under thumbnails

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,5 +1,5 @@
 .project{
-  padding: 0px 25px;
+  /* padding: 0px 25px; */
   margin-bottom: 0px;
   height: 120px;
   text-align: center;
@@ -11,7 +11,9 @@
   margin: 100px 0px;
 }
 .small-space{
-  margin: 30px 10px;
+  display:justify;
+  align-content: center;
+  margin: 30px 20px;
 }
 
 .img .activated,
@@ -28,7 +30,6 @@
   min-height: 100%;
   max-width: 100%;
   float:left;
-  margin-left: 15px;
   box-shadow: 0px 0px 10px 2px #33333379;
 }
 .project .fas{
@@ -49,23 +50,26 @@
 }
 
 .media{
-  width: 95px;
-  height: 95px;
+  margin: 0px 15px;
+  width: 45px;
+  height: 45px;
 }
 
 .img{
   cursor: default;
   max-width: 305px;
-
+}
+.linkable{
+  display:inline-flex;
+  position: relative;
+  right: 10px;
 }
 #named{
   max-width: 80px;
   text-align:center;
-  margin-left: 40px;
   display:block;
 }
 .media a{
-  float: right;
   margin:0px;
   color: #333;
 }
